--- a/src/app/res-nav/res-nav.component.html
+++ b/src/app/res-nav/res-nav.component.html
@@ -5,8 +5,8 @@
       [opened]="(isHandset$ | async) === false">
     <mat-toolbar></mat-toolbar>
     <mat-nav-list>
-      <a mat-list-item href="#">Table List</a>
-      <a mat-list-item href="#">Order List</a>
+      <a mat-list-item routerLink="table-list">Table List</a>
+      <a mat-list-item routerLink="order-list">Order List</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
@@ -21,6 +21,8 @@
       </button>
       <span>Management System</span>
     </mat-toolbar>
-    <!-- Add Content Here -->
+
+    <router-outlet></router-outlet>
+
   </mat-sidenav-content>
 </mat-sidenav-container>
