--- a/src/app/res-nav/res-nav.component.html
+++ b/src/app/res-nav/res-nav.component.html
@@ -5,7 +5,7 @@
       [opened]="(isHandset$ | async) === false">
     <mat-toolbar></mat-toolbar>
     <mat-nav-list>
-      <a mat-list-item routerLink="table-list">Table List</a>
+      <a mat-list-item routerLink="/manage">Table List</a>
       <a mat-list-item routerLink="order-list">Order List</a>
     </mat-nav-list>
   </mat-sidenav>
