--- a/src/app/order/order.component.html
+++ b/src/app/order/order.component.html
@@ -1,1 +1,17 @@
-<p>order works!</p>
+<div *ngFor="let order of orders">
+    <mat-card>
+        <mat-card-title>
+            dishId: {{order.dishId}}
+        </mat-card-title>
+        <mat-card-content>
+            <span>
+                tableId: {{order.tableId}}
+            </span>
+            <span *ngIf="order.served != 1">
+                <button mat-raised-button color="primary">
+                    Served
+                </button>
+            </span>
+        </mat-card-content>
+    </mat-card>
+</div>
