--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -8,7 +8,9 @@
                 price: {{dish.price}}
             </span>
             <span *ngIf="dish.status != 0; else elseBlock">
-                <button mat-raised-button color="primary">Order</button>
+                <button mat-raised-button color="primary" (click)="addOrder(dish)">
+                    Order
+                </button>
             </span>
             <ng-template #elseBlock>
                 <button mat-raised-button disabled>order</button>
