--- a/src/app/res-nav/res-nav.component.html
+++ b/src/app/res-nav/res-nav.component.html
@@ -5,8 +5,9 @@
       [opened]="(isHandset$ | async) === false">
     <mat-toolbar></mat-toolbar>
     <mat-nav-list>
-      <a mat-list-item (click)="drawer.toggle()" routerLink="/manage">Table List</a>
+      <a mat-list-item (click)="drawer.toggle()" routerLink="/">Table List</a>
       <a mat-list-item (click)="drawer.toggle()" routerLink="order-list">Order List</a>
+      <a mat-list-item (click)="drawer.toggle()" routerLink="menu-list">Menu</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
