reorganize and add admin

--- a/src/app/cus/order/order.component.html
+++ b/src/app/cus/order/order.component.html
@@ -1,7 +1,7 @@
 <div *ngFor="let order of orders">
     <mat-card>
         <mat-card-title>
-            dishId: {{order.payload.val().name}}
+            {{order.payload.val().dishName}}
         </mat-card-title>
         <mat-card-content>
             <div>price: {{order.payload.val().price}}</div>
