--- a/src/app/cus/cus-nav/cus-nav.component.html
+++ b/src/app/cus/cus-nav/cus-nav.component.html
@@ -5,9 +5,8 @@
       [opened]="(isHandset$ | async) === false">
     <mat-toolbar></mat-toolbar>
     <mat-nav-list>
-      <a mat-list-item (click)="drawer.toggle()" routerLink="/">Table List</a>
-      <a mat-list-item (click)="drawer.toggle()" routerLink="order-list">Order List</a>
-      <a mat-list-item (click)="drawer.toggle()" routerLink="menu-list">Menu</a>
+      <a mat-list-item (click)="drawer.toggle()" [routerLink]="['/table', tableId]">Menu</a>
+      <a mat-list-item (click)="drawer.toggle()" routerLink="order">Your order</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
@@ -16,11 +15,10 @@
         type="button"
         aria-label="Toggle sidenav"
         mat-icon-button
-        (click)="drawer.toggle()"
-        *ngIf="isHandset$ | async">
+        (click)="drawer.toggle()">
         <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
       </button>
-      <span>Management System</span>
+      <span>Restaurant</span>
     </mat-toolbar>
 
     <router-outlet></router-outlet>
