--- a/src/app/cus/order/order.component.html
+++ b/src/app/cus/order/order.component.html
@@ -13,6 +13,6 @@
     </mat-card>
 </div>
 
-<button mat-raised-button color="accent" (click)="billTable()">
+<button *ngIf="noOrders > 0" mat-raised-button color="accent" (click)="billTable()">
     Call for billing
 </button>
