--- a/src/app/res/res-nav/res-nav.component.html
+++ b/src/app/res/res-nav/res-nav.component.html
@@ -8,6 +8,7 @@
       <a mat-list-item (click)="drawer.toggle()" routerLink="">Table List</a>
       <a mat-list-item (click)="drawer.toggle()" routerLink="order-list">Order List</a>
       <a mat-list-item (click)="drawer.toggle()" routerLink="menu-list">Menu</a>
+      <a mat-list-item (click)="drawer.toggle()" routerLink="report">Report</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
