--- a/src/app/admin/edit-menu/edit-menu.component.css
+++ b/src/app/admin/edit-menu/edit-menu.component.css
@@ -1,11 +1,11 @@
-.mat-button-base  {
-    margin: 8px 8px 8px 0;
-}
-  
 .add-button {
     margin: 8px 8px 8px 16px;
 }
 
 .mat-card {
     padding: 8px 8px 8px 16px;
+}
+
+.mat-raised-button {
+    margin-left: 8px;
 }
