--- a/src/app/res/table-list/table-list.component.css
+++ b/src/app/res/table-list/table-list.component.css
@@ -1,3 +1,12 @@
 .mat-button-base  {
-    margin: 8px 8px 8px 0;
-  }
+  margin: 8px 8px 8px 0;
+}
+
+.mat-card {
+  padding: 8px;
+}
+
+.table-name {
+  font-size: 22px;
+  font-weight: 500;
+}
