--- a/src/app/res/table-list/table-list.component.html
+++ b/src/app/res/table-list/table-list.component.html
@@ -1,30 +1,28 @@
 <div *ngFor="let table of tableList">
     <mat-card>
-        <mat-card-title>
+        <span class="table-name">
             {{table.payload.val().name}}
-        </mat-card-title>
-        <mat-card-content>
-            <span>
-                status: {{tableStatus[table.payload.val().status]}}
-            </span>
-            <div>
-                <button mat-raised-button *ngIf="table.payload.val().status != 0"
-                    [routerLink]="['/table', table.payload.val().id]">
-                    Site
-                </button>
-                <button mat-raised-button *ngIf="table.payload.val().status == 0" color="primary"
-                    (click)="enableTable(table)">
-                    Enable
-                </button>
-                <button mat-raised-button *ngIf="table.payload.val().status == 1" color="warn"
-                    (click)="disableTable(table)">
-                    Disable
-                </button>
-                <button mat-raised-button *ngIf="table.payload.val().status == 3" color="accent"
-                    (click)="billTable(table)" routerLink="/manage/billing">
-                    Bill
-                </button>
-            </div>
-        </mat-card-content>
+        </span>
+        <span>
+            {{tableStatus[table.payload.val().status]}}
+        </span>
+        <div>
+            <button mat-raised-button *ngIf="table.payload.val().status != 0"
+                [routerLink]="['/table', table.payload.val().id]">
+                Site
+            </button>
+            <button mat-raised-button *ngIf="table.payload.val().status == 0" color="primary"
+                (click)="enableTable(table)">
+                Enable
+            </button>
+            <button mat-raised-button *ngIf="table.payload.val().status == 1" color="warn"
+                (click)="disableTable(table)">
+                Disable
+            </button>
+            <button mat-raised-button *ngIf="table.payload.val().status == 3" color="accent" (click)="billTable(table)"
+                routerLink="/manage/billing">
+                Bill
+            </button>
+        </div>
     </mat-card>
 </div>
