--- a/src/app/res/res-nav/res-nav.component.html
+++ b/src/app/res/res-nav/res-nav.component.html
@@ -18,7 +18,14 @@
         aria-label="Toggle sidenav"
         mat-icon-button
         (click)="drawer.toggle()">
-        <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
+        <mat-icon aria-label="Side nav toggle icon" 
+          matBadge="B" 
+          matBadgeColor="warn" 
+          matBadgeSize="small"
+          matBadgePosition="before"
+          [matBadgeHidden]="hiddenBadge">
+          menu
+        </mat-icon>
       </button>
       <span>Management System</span>
     </mat-toolbar>
