--- a/src/app/admin/admin-nav/admin-nav.component.html
+++ b/src/app/admin/admin-nav/admin-nav.component.html
@@ -5,8 +5,9 @@
       [opened]="(isHandset$ | async) === false">
     <mat-toolbar>Menu</mat-toolbar>
     <mat-nav-list>
-      <a mat-list-item (click)="drawer.toggle()" routerLink="/admin">Edit table</a>
-      <a mat-list-item (click)="drawer.toggle()" routerLink="edit-menu">Edit menu</a>
+      <a mat-list-item (click)="drawer.toggle()" routerLink="/admin">Edit Table</a>
+      <a mat-list-item (click)="drawer.toggle()" routerLink="edit-menu">Edit Menu</a>
+      <a mat-list-item (click)="drawer.toggle()" routerLink="edit-category">Edit Category</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
