--- a/src/app/admin/admin-nav/admin-nav.component.html
+++ b/src/app/admin/admin-nav/admin-nav.component.html
@@ -3,11 +3,18 @@
       [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
       [mode]="(isHandset$ | async) ? 'over' : 'side'"
       [opened]="(isHandset$ | async) === false">
-    <mat-toolbar>Menu</mat-toolbar>
+    <mat-toolbar>
+      <span>{{user.name}}</span>
+      <span style="flex: auto;"></span>
+      <button mat-icon-button (click)="logout()">
+        <mat-icon>login</mat-icon>
+      </button>
+    </mat-toolbar>
     <mat-nav-list>
       <a mat-list-item (click)="drawer.toggle()" routerLink="/admin">Edit Table</a>
       <a mat-list-item (click)="drawer.toggle()" routerLink="edit-menu">Edit Menu</a>
       <a mat-list-item (click)="drawer.toggle()" routerLink="edit-category">Edit Category</a>
+      <a mat-list-item (click)="drawer.toggle()" routerLink="edit-staff">Edit Staff</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
